added a disabled value for the select tree

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -38,6 +38,7 @@
     <p>State of the plant: </p>
     <label for="state"></label>
       <select id="state" form="state">
+        <option disabled selected value> -- select an option -- </option>
         <option value="1">1 - Quite dead</option>
         <option value="2">2 - Dying</option>
         <option value="3">3 - Fine</option>
