trying to fix "POST"

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -25,14 +25,14 @@
     </tbody>
 </table>
 
-<form method="POST" action="/tempandhums">
+<form method="POST" action="/home">
   <div>
     <label for="worker_name">Worker's name</label>
     <input type="text" id="worker_name" name="worker_name">
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label> 
-    <textarea id="workers_assesment" name="workers_assessment"></textarea>
+    <textarea id="workers_assessment" name="workers_assessment"></textarea>
   </div>
   <div>
     <p>State of the plant: </p>
