changed location to post to.

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -25,7 +25,9 @@
     </tbody>
 </table>
 
-<form method="POST" action="/home">
+<p>Action used to be "/tempandhums"</p>
+
+<form method="POST" action="/homePage"> 
   <div>
     <label for="worker_name">Worker's name</label>
     <input type="text" id="worker_name" name="worker_name">
