del: form val add: name val, temp&hum may be null

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -37,7 +37,7 @@
   <div>
     <p>State of the plant: </p>
     <label for="state"></label>
-      <select id="state" form="state">
+      <select id="state" name="state">
         <option disabled selected value> -- select an option -- </option>
         <option value="1">1 - Quite dead</option>
         <option value="2">2 - Dying</option>
