--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -1,7 +1,7 @@
 <center>
-    <h1 style="font-size:40px; color: White">Inspecting plants</h1>
+    <h1 style="font-size:40px; color: black">Inspecting plants</h1>
 </center>
-<h3 style="color:white">Past inspections </h3>
+<h3 style="color:black">Past inspections </h3>
 
 <h3>Report on the plant's state</h3>
     <div>
