recolored text and moved text locations

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -1,7 +1,6 @@
 <center>
-    <h1 style="font-size:40px; color: black">Inspecting plants</h1>
+    <h1 style="font-size:40px">Inspecting plants</h1>
 </center>
-<h3 style="color:black">Past inspections </h3>
 
 <h3>Report on the plant's state</h3>
     <div>
@@ -10,6 +9,7 @@
     </div>
 </h3>
 
+<h3>Past inspections </h3>
 <table id="past measurements">
     <thead>
         <tr>
