edited a text field to make a test

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -2,9 +2,9 @@
     <h1 style="font-size:40px">Inspecting plants</h1>
 </center>
 
-<h3>Report on the plant's state</h3>
+<h3>Current state of the plant</h3>
     <div>
-        <p>Current temperature: {{temperature}}</p>
+        <p>Current temperature: something something degrees</p>
         <p>Current humidity: {{humidity}}</p>
     </div>
 </h3>
