reordered some code to hopefully fix the problem.

--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -25,7 +25,7 @@
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label> 
-    <textarea id="workers_assesment" name="workers_assessment"></textarea>
+    <textarea id="workers_assessment" name="workers_assessment"></textarea>
   </div>
   <div>
     <p>State of the plant: </p>
