--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -18,7 +18,7 @@
     </tbody>
 </table>
 
-<form method="POST" action="/home">
+<form method="POST" action="/homePage">
   <div>
     <label for="worker_name">Worker's name</label>
     <input type="text" id="worker_name" name="worker_name">
