Added a background image in css to test if css is applied

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5,6 +5,12 @@
  p {
      width: 100%;
      font-family: Arial, Helvetica, sans-serif;
-     
  }
 
+ /**
+  * Body
+  */
+
+body {
+    background-image: url("https://samvirke.dk/sites/default/files/styles/image_component_large/public/migrated/dr/drivhusplanter_0.jpg.jpeg?itok=b5_oVIzs");
+}
