changed values in the options panel

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,11 +32,11 @@
     <label for="state"></label>
       <select id="state" name="state">
         <option disabled selected value> -- select an option -- </option>
-        <option value="1">1 - Quite dead</option>
-        <option value="2">2 - Dying</option>
-        <option value="3">3 - Fine</option>
-        <option value="4">4 - Well</option>
-        <option value="5">5 - Very well</option>
+        <option value= 1>1 - Quite dead</option>
+        <option value= 2>2 - Dying</option>
+        <option value= 3>3 - Fine</option>
+        <option value= 4>4 - Well</option>
+        <option value= 5>5 - Very well</option>
       </select>
     </div>
   <div>
