changed background to make it more readable.

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -12,5 +12,5 @@
   */
 
 body {
-    background-image: url("https://samvirke.dk/sites/default/files/styles/image_component_large/public/migrated/dr/drivhusplanter_0.jpg.jpeg?itok=b5_oVIzs");
+    background-color: light-blue;
 }
