changed the loading of web pages.

--- a/views/inspections.hbs
+++ b/views/inspections.hbs
@@ -1,4 +1,7 @@
 <h3>Review past inspections </h3>
+<div id="myTable"></div>
+    <canvas id="myChart"></canvas>
+</div>
 <table id="past measurements">
     <thead>
         <tr>
