gets inspection and should show correct page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
     <h3>A web page for viewing the temperature and humidity of plants.</h3>
 </center>
 
-<a href="./inspections">Review all inspections</a>
+<a href="./inspections.hbs">Review all inspections</a>
 
 <h1> Commit plant inspection </h1>
 <form method="POST" action="/home">
