--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,7 @@
 <a href="inspection">Review all inspections</a>
 
 <h1> Commit plant inspection </h1>
-<form method="POST" action="/home">
+<form method="POST" action="/inspection">
   <div>
     <label for="worker_name">Worker's name</label>
     <input type="text" id="worker_name" name="worker_name">
