goes with previous commit

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,21 +1,23 @@
 <h3>Review past inspections </h3>
 <div id="myTable"></div>
-    <canvas id="myChart"></canvas>
+<canvas id="myChart"></canvas>
 </div>
-<table id="past measurements">
-    <thead>
-        <tr>
-            <th>Temperature</th>
-            <th>Humidity</th>
-            <th>Time</th>
-            <th>Worker name</th>
-            <th>Plant state</th>
-            <th>Workers assessment</th>
-        </tr>
-    </thead>
-    <tbody id="myTable">
-    </tbody>
-</table>
+<div id="past measurements">
+    <table>
+        <thead>
+            <tr>
+                <th>Temperature</th>
+                <th>Humidity</th>
+                <th>Time</th>
+                <th>Worker name</th>
+                <th>Plant state</th>
+                <th>Workers assessment</th>
+            </tr>
+        </thead>
+        <tbody id="myTable">
+        </tbody>
+    </table>
+</div>
 
 <footer>
     <a href="home">return to home page</a>
