changed locations of divs to try and fix data errors

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -2,22 +2,23 @@
 <canvas id="myChart"></canvas>
 </div>
 
-<div id="past measurements">
-    <table>
-        <thead>
-            <tr>
-                <th>Temperature</th>
-                <th>Humidity</th>
-                <th>Time</th>
-                <th>Worker name</th>
-                <th>Plant state</th>
-                <th>Workers assessment</th>
-            </tr>
-        </thead>
-        <tbody id="myTable">
-            <div id="myTable"></div>
-        </tbody>
-    </table>
+<div id="myTable"></div>
+    <div id="past measurements">
+        <table>
+            <thead>
+                <tr>
+                    <th>Temperature</th>
+                    <th>Humidity</th>
+                    <th>Time</th>
+                    <th>Worker name</th>
+                    <th>Plant state</th>
+                    <th>Workers assessment</th>
+                </tr>
+            </thead>
+            <tbody id="myTable">
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <footer>
