--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -2,7 +2,8 @@
 <canvas id="myChart"></canvas>
 </div>
 
-<div id="myTable"></div>
+<h3>Review measurement table</h3>
+<div id="myTable">
     <div id="past measurements">
         <table>
             <thead>
