--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
+
 <h3>Review past inspections </h3>
 <canvas id="myChart"></canvas>
 </div>
