previous commit was a bad idea.

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,11 +1,9 @@
-<link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
-
 <h3>Review past inspections </h3>
 <canvas id="myChart"></canvas>
 </div>
 
 <h3>Review measurement table</h3>
-<div id="myTable">
+<div id="myTable"></div>
     <div id="past measurements">
         <table>
             <thead>
