--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,28 +2,30 @@
  * Fonts
  */
 
- p {
-     width: 100%;
-     font-family: Arial, Helvetica, sans-serif;
- }
+p {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
- /**
+/**
   * Background wallpaper
   */
 
 body {
-    background-image:linear-gradient(#2d45a5,#458baf);
-    height: 100%;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    font-family: Arial;
-  }
+  background-image: linear-gradient(#2d45a5, #458baf);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: Arial;
+}
 
 /**
  *  Table design
  */
 
-table, th, td {
-    border-collapse: collapse;
-  }
+table,
+th,
+td {
+  border-collapse: collapse;
+}
