changed back commit 9ec0ea09

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,7 @@
+<center>
+  <h1 style="font-size:40px">Inspecting plants</h1>
+  <h3>A web page for viewing the temperature and humidity of plants.</h3>
+</center>
 <a href="inspection">Review all inspections</a>
 
 <h1> Commit plant inspection </h1>
