worker_name is now name

--- a/views/data.hbs
+++ b/views/data.hbs
@@ -3,7 +3,7 @@
   <td>{{temperature}}</td>
   <td>{{humidity}}</td>
   <td>{{time}}</td>
-  <td>{{worker_name}}</td>
+  <td>{{name}}</td>
   <td>{{state}}</td>
   <td>{{workers_assessment}}</td>
 </tr>
