--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,8 +8,8 @@
 <h1> Commit plant inspection </h1>
 <form method="POST" action="/inspection">
   <div>
-    <label for="worker_name">Worker's name</label>
-    <input type="text" id="worker_name" name="worker_name">
+    <label for="name">Worker's name</label>
+    <input type="text" id="name" name="name">
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label>
