added chart update button

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -19,6 +19,8 @@
     </tbody>
 </table>
 
+<input type="button" value="Capacity Chart" onclick="updateMyChart();">
+
 <footer>
     <a href="home">return to home page</a>
 </footer>
