trying to add current temperature and humidity to plant.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,6 +6,10 @@
 <a href="inspection">Review all inspections</a>
 
 <h1> Commit plant inspection </h1>
+
+<p>Current plant temperature is: </p>{{temperature}}
+<p>Current plant humidity is: </p>{{humidity}}
+
 <form method="POST" action="/inspection">
   <div>
     <label for="name">Worker's name</label>
