--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,10 +3,7 @@
   <h3>A web page for viewing the temperature and humidity of plants.</h3>
 </center>
 
-<a href="inspection">Review all inspections</a>
-
-<p>Current plant temperature is: </p>{{temperature}}
-<p>Current plant humidity is: </p>{{humidity}}
+<a href="inspection" style="color: darkred">Review all inspections</a>
 
 <h1> Commit plant inspection </h1>
 
