added update chart function to page.

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -19,7 +19,9 @@
     </tbody>
 </table>
 
+<button type="button" onclick="fetchNewData()">Fetch new data</button>
+
 <footer>
-    <a href="inspection">refresh page</a>
-    <a href="home">return to home page</a>
+    <div><a href="inspection">refresh page</a></div>
+    <div><a href="home">return to home page</a></div>
 </footer>
