use input for submit instead of button. added console log to see what  index.js does

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,7 +33,7 @@
     </select>
   </div>
   <div>
-    <button type="submit">Submit</button>
+    <input type="submit" value="Submit">
   </div>
   {{#if errMessage}}
   <p style="color: rgb(255, 0, 0); text-align: center">Error: {{ errMessage }}</p>
