--- a/public/style/main.css
+++ b/public/style/main.css
@@ -12,7 +12,7 @@ p {
   */
 
 body {
-  background-image: linear-gradient(#2d45a5, #458baf);
+  background-image: linear-gradient(#158000, #61ff06);
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
