--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,10 +9,10 @@
 
 <form method="POST" action="/inspection">
   <div>
-    <label for="name">Worker's name</label>
+    <label for="worker_name">Worker's name</label>
   </div>
   <div>
-    <input type="text" id="name" name="name" required>
+    <input type="text" id="worker_name" name="worker_name" required>
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label>
