--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+    <div id="navbar">
+        <nav>
+            <a href="inspection" style="color: pink">Review all inspections</a>
+            <a href="home">return to home page</a>
+        </nav>
+    </div>
     {{{body}}}
 </body>
 
