--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,13 +14,21 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <nav>
-            <a href="inspection" style="color: pink">Review all inspections</a>
-            <a href="home">return to home page</a>
-        </nav>
+    <div id="container">
+        <div id="header">
+            <header>
+                <div id="navigation-main">
+                    <table>
+                        <tr>
+                            <td> <a href="home"> Commit plant inspection</a> </td>
+                            <td> <a href="inspection"> Review past inspections</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </header>
+        </div>
+        {{{body}}}
     </div>
-    {{{body}}}
 </body>
 
 </html>
