Trying to improve page structure, and add more css.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,18 +14,14 @@
 </head>
 
 <body>
-    <div id="container">
-        <div id="header">
-            <header>
-                <div id="navigation-main">
-                    <table>
-                        <tr>
-                            <td> <a href="home"> Commit plant inspection</a> </td>
-                            <td> <a href="inspection"> Review past inspections</a></td>
-                        </tr>
-                    </table>
-                </div>
-            </header>
+    <div class="container">
+        <div class="header">
+            <nav>
+                <ul>
+                    <li><a href="home"> Commit plant inspection</a></li>
+                    <li><a href="inspection"> Review past inspections</a></li>
+                </ul>
+            </nav>>
         </div>
         {{{body}}}
     </div>
