--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
                     <li><a href="home"> Commit plant inspection</a></li>
                     <li><a href="inspection"> Review past inspections</a></li>
                 </ul>
-            </nav>>
+            </nav>
         </div>
         {{{body}}}
     </div>
