css for ul & h1,  title moved to main.hbs for testing

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,13 +1,8 @@
-<center>
-  <h1 style="font-size:40px">Inspecting plants</h1>
-  <h3>A web page for viewing the temperature and humidity of plants.</h3>
-</center>
-
 <h1> Commit plant inspection </h1>
 
 <form method="POST" action="/inspection">
   <div>
-    <label for="worker_name">Worker's name</label>
+    <strong><label for="worker_name">Worker's name</label></strong>
   </div>
   <div>
     <input type="text" id="worker_name" name="worker_name" required>
