--- a/public/style/main.css
+++ b/public/style/main.css
@@ -34,6 +34,15 @@ td {
   display: block;
 }
 
+ul {
+  margin: 15%;
+}
+
 li {
   display: inline;
+  padding: 6px;
+}
+
+.header-title {
+  text-align: center;
 }
