--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,11 +15,15 @@
 
 <body>
     <div class="container">
-        <div class="header">
+        <div class="header_title">
+            <h1 style="font-size:40px"> Inspecting plants</h1>
+            <h1 style="font-size:32px"> A web page for viewing the temperature and humidity of plants.</h1>
+        </div>
+        <div class="header_navbar">
             <nav>
                 <ul>
-                    <li><a href="home"> Commit plant inspection</a></li>
-                    <li><a href="inspection"> Review past inspections</a></li>
+                    <li><a href="home"> Commit inspection</a></li>
+                    <li><a href="inspection"> Past inspections</a></li>
                 </ul>
             </nav>
         </div>
