--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,8 +16,8 @@
 <body>
     <div class="container">
         <div class="header_title">
-            <h1 style="font-size:40px"> Inspecting plants</h1>
-            <h1 style="font-size:32px"> A web page for viewing the temperature and humidity of plants.</h1>
+            <h1> Inspecting plants</h1>
+            <h1> A web page for viewing the temperature and humidity of plants.</h1>
         </div>
         <div class="header_navbar">
             <nav>
