--- a/public/style/main.css
+++ b/public/style/main.css
@@ -8,7 +8,7 @@ p {
 }
 
 /**
-  * Background design
+  * Background
   */
 
 body {
@@ -20,12 +20,10 @@ body {
 }
 
 /**
- * Table design
+ * Table
  */
 
-table,
-th,
-td {
+table, th, td {
   border-collapse: collapse;
 }
 
@@ -62,6 +60,7 @@ li {
 form {
   /* Center the form onto the page itself */
   margin: 0 auto;
+  /* Ensure, that the form fits all devices */
   width: 66%;
   /* Ensures the outline of the form is visible. */
   padding: 1em;
