--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,6 +15,8 @@
   </div>
   <div>
     <label for="state">INT_STATE</label>
+  </div>
+  <div>
     <input type="number" id="state" name="state">
   </div>
   <div>
