--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,16 +5,18 @@
     <strong><label for="worker_name">Worker's name</label></strong>
   </div>
   <div>
-    <input type="text" id="worker_name" name="worker_name" required>
+    <input type="text" id="worker_name" name="worker_name" required width=50%>
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label>
   </div>
   <div>
-    <textarea id="workers_assessment" name="workers_assessment" required></textarea>
+    <textarea id="workers_assessment" name="workers_assessment" required width=50%></textarea>
   </div>
   <div>
     <label for="state">INT_STATE</label>
+  </div>
+  <div>
     <input type="number" id="state" name="state">
   </div>
   <div>
