not null constraint on worker_name

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,11 @@
 <h1> Commit plant inspection </h1>
 
 <form method="POST" action="/inspection">
+
+  <div>
+    <label for="worker_name">Recipient:</label>
+    <input type="text" id="recipient" name="recipient">
+  </div>
   <div>
     <strong><label for="worker_name">Worker's name</label></strong>
   </div>
@@ -11,7 +16,7 @@
     <label for="workers_assessment">Assessment of the plant</label>
   </div>
   <div>
-    <textarea id="workers_assessment" name="workers_assessment" required width=100%></textarea>
+    <textarea id="workers_assessment" name="workers_assessment" width=100%></textarea>
   </div>
   <div>
     <label for="state">INT_STATE</label>
