--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,14 +3,8 @@
 <form method="POST" action="/inspection">
 
   <div>
-    <label for="worker_name">Recipient:</label>
-    <input type="text" id="recipient" name="recipient">
-  </div>
-  <div>
-    <strong><label for="worker_name">Worker's name</label></strong>
-  </div>
-  <div>
-    <input type="text" id="worker_name" name="worker_name" required width=100%>
+    <label for="worker_name">worker name</label>
+    <input type="text" id="worker_name" name="worker_name">
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label>
