two tables - one for workers, one for tempandhumid, changed data.hbs to reflect.

--- a/views/data.hbs
+++ b/views/data.hbs
@@ -3,8 +3,9 @@
   <td>{{temperature}}</td>
   <td>{{humidity}}</td>
   <td>{{time}}</td>
+{{/each}}
+{{#each Workers}}
   <td>{{worker_name}}</td>
   <td>{{state}}</td>
   <td>{{workers_assessment}}</td>
 </tr>
-{{/each}}
