changed visuals of form

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,8 @@
 
   <div>
     <label for="worker_name">worker name</label>
+  </div>
+  <div>
     <input type="text" id="worker_name" name="worker_name">
   </div>
   <div>
