Trying to add data from Workers table to measurement table.

--- a/views/data.hbs
+++ b/views/data.hbs
@@ -5,3 +5,9 @@
   <td>{{time}}</td>
 </tr>
 {{/each}}
+{{#each Workers}}
+<tr>
+  <td>{{worker_name}}</td>
+  <td>{{state}}</td>
+  <td>{{workers_assessment}}</td>
+</tr>
