--- a/public/style/main.css
+++ b/public/style/main.css
@@ -17,6 +17,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: Arial;
+  background-size: auto;
 }
 
 /**
