--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,16 +6,16 @@
     <label for="worker_name">worker name</label>
   </div>
   <div>
-    <input type="text" id="worker_name" name="worker_name">
+    <input type="text" id="worker_name" name="worker_name" required>
   </div>
   <div>
     <label for="workers_assessment">Assessment of the plant</label>
   </div>
   <div>
-    <textarea id="workers_assessment" name="workers_assessment" width=100%></textarea>
+    <textarea id="workers_assessment" name="workers_assessment" width=100% required></textarea>
   </div>
   <div>
-    <label for="state">Rate the state of the plant</label>
+    <label for="state" required>Rate the state of the plant</label>
   </div>
   <div>
     <select id="state" name="state">
