aligned text in the center

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
 <form method="POST" action="/inspection">
 
   <div>
-    <label for="worker_name">worker name</label>
+    <label for="worker_name">Worker name</label>
   </div>
   <div>
     <input type="text" id="worker_name" name="worker_name" required>
@@ -12,7 +12,7 @@
     <label for="workers_assessment">Assessment of the plant</label>
   </div>
   <div>
-    <textarea id="workers_assessment" name="workers_assessment" width=100% required></textarea>
+    <textarea id="workers_assessment" name="workers_assessment" required></textarea>
   </div>
   <div>
     <label for="state" required>Rate the state of the plant</label>
