--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
         <div class="header_navbar">
             <nav>
                 <ul>
-                    <li><a href="home"> Commit inspection</a></li>
+                    <li><a href="home"> Inspection page</a></li>
                     <li><a href="inspection"> Past inspections</a></li>
                 </ul>
             </nav>
