--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,9 +2,16 @@
  * Fonts
  */
 
+@media only screen and (max-width: 768px) {
+  h1, h2 {
+    text-align: center;
+  }
+}
+
 p {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 /**
