Div for measurement chart, and made some edits to the css of the canvas.

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -6,6 +6,12 @@
   h1, h2 {
     text-align: center;
   }
+
+  canvas {
+    position: relative; 
+    height:40vh; 
+    width:80vw;
+  }
 }
 
 p {
