--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,5 +1,7 @@
-<h3>Review past inspections </h3>
-<canvas id="myChart"></canvas>
+<div id="Measurement chart">
+    <h3>Review past inspections </h3>
+    <canvas id="myChart"></canvas>
+</div>
 
 <h3>Review measurement table</h3>
 
