--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -18,8 +18,10 @@
     </tbody>
 </table>
 
-<button type="button" onclick="fetchNewData()">Fetch new data</button>
-
 <footer>
-    <div><a href="inspection">refresh page</a></div>
+    <div>
+        <form action="/inspection">
+            <input type="submit" value="Refresh data">
+        </form>
+    </div>
 </footer>
