unneccessary tags fixed

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -19,9 +19,9 @@
 </table>
 
 <footer>
-    <div>
+    <center>
         <form action="/inspection">
             <input type="submit" value="Refresh data">
         </form>
-    </div>
+    </center>
 </footer>
