--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,12 +2,6 @@
  * Fonts
  */
 
-@media only screen and (max-width: 768px) {
-  h1, h2 {
-    text-align: center;
-  }
-}
-
 p {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -84,4 +78,19 @@ form {
   padding: 1em;
   background-color: rgba(2, 2, 2, 0.5);
   border-radius: 1em;
+}
+
+/**
+ * On mobile devices: Align tables and headers in the center.
+ */
+
+@media only screen and (max-width: 768px) {
+  h1, h2 {
+    text-align: center;
+  }
+
+  table {
+    margin-left:auto; 
+    margin-right:auto;
+  }
 }
