style on review past inspections

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,4 +1,4 @@
-<h3>Review past inspections </h3>
+<h1 style="margin-left: 16.6%;"> Review past inspections </h1>
 <canvas id="myChart"></canvas>
 
 <h1>Review measurement table</h1>
