--- a/public/style/main.css
+++ b/public/style/main.css
@@ -94,3 +94,17 @@ form {
     margin-right:auto;
   }
 }
+
+/**
+ * On larger devices: Let elements be aligned to the left, but ensure, 
+ * there is some space from the edge of the screen to preserve readability.
+ */
+
+@media only screen and (min-width: 768px) {
+  .tableheader {
+    margin-left: 5%;
+  }
+  .table {
+    margin-left: 10%;
+  }
+}
