--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,7 +1,7 @@
 <h1 style="margin-left: 5%;"> Review past inspections </h1>
 <canvas id="myChart"></canvas>
 
-<h1>Review measurement table</h1>
+<h1 class="tableheader">Review measurement table</h1>
 
 <table>
     <thead>
