hide chart and chart header on mobile devices

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -95,7 +95,11 @@ form {
     margin-bottom: 3.5%;
   }
 
-  #myChart {
+  .myChart {
+    visibility: hidden;
+  }
+
+  .tableheader {
     visibility: hidden;
   }
 }
