centered table and chart re-added

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -1,5 +1,8 @@
 <h1> Review past inspections </h1>
 
+<canvas id="myChart"></canvas>
+
+<center>
 <table>
     <thead>
         <tr>
@@ -14,6 +17,7 @@
     <tbody id="myTable">
     </tbody>
 </table>
+</center>
 
 <footer>
     <center>
