--- a/public/style/main.css
+++ b/public/style/main.css
@@ -87,24 +87,74 @@ body {
  * Hide chart, as it is not readable regardless.
  */
 
-@media only screen and (max-width: 768px) {
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+  /* Align headers in the center for readability */
   h1, h2 {
     text-align: center;
   }
 
-  table {
-    margin-left:auto; 
-    margin-right:auto;
-    margin-bottom: 3.5%;
+  /* Header for chart is removed */
+  h4 {
+    visibility: hidden
   }
 
+  /* Chart can't be read on mobile anyway, so we just remove it.*/
   #myChart {
     visibility: hidden;
   }
 
+  /* Table headers serve no use on mobile tables */
   .tableheader {
     visibility: hidden;
   }
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { 
+    border: 1px solid #ccc; 
+  }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "Temperature"; }
+	td:nth-of-type(2):before { content: "Humidity"; }
+	td:nth-of-type(3):before { content: "Time"; }
+	td:nth-of-type(4):before { content: "Worker name"; }
+	td:nth-of-type(5):before { content: "Plant state"; }
+	td:nth-of-type(6):before { content: "Workers assessment"; }
 }
 
 /**
