--- a/public/style/main.css
+++ b/public/style/main.css
@@ -124,13 +124,13 @@ only screen and (max-width: 760px),
 	}
 	
 	tr { 
-    border: 1px solid #ccc; 
+    border: 1px solid; 
   }
 	
 	td { 
 		/* Behave  like a "row" */
 		border: none;
-		border-bottom: 1px solid #eee; 
+		border-bottom: 2px solid; 
 		position: relative;
 		padding-left: 50%; 
 	}
