no margin on header for plant inspection - that looks stupid

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<h1 style="margin-left: 16.6%;"> Commit plant inspection </h1>
+<h1> Commit plant inspection </h1>
 
 <form method="POST" action="/inspection">
 
