--- a/public/style/main.css
+++ b/public/style/main.css
@@ -173,4 +173,10 @@ only screen and (max-width: 760px),
     margin-left: 4.5%;
     margin-bottom: 3.5%;
   }
+
+  input {
+    width: 75%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+  }
 }
