less width on input fields for pc

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -175,17 +175,16 @@ only screen and (max-width: 760px),
   }
 
   input {
-    width: 100%;
+    width: 75%;
     padding: 3px;
   }
 
   textarea {
-    width: 100%;
-    padding: 3px;
+    width: 75%
   }
 
   select {
-    width: 100%;
-    padding: 3px;
+    width: 75%;
+    padding: 6px;
   }
 }
