--- a/public/style/main.css
+++ b/public/style/main.css
@@ -117,7 +117,7 @@ only screen and (max-width: 760px),
 		display: block; 
 	}
 	
-	/* Hide table headers (but not display: none;, for accessibility) */
+	/* Hide table headers on mobile (but not display: none, as this gives bugs in css) */
 	thead tr { 
 		position: absolute;
 		top: -9999px;
@@ -131,8 +131,8 @@ only screen and (max-width: 760px),
 	td { 
 		/* Behave  like a "row" */
     border: none;
-    border-top: 2px solid;
-		border-bottom: 2px solid; 
+    border-top: 3px solid;
+		border-bottom: 3px solid; 
 		position: relative;
 		padding-left: 50%; 
 	}
