--- a/public/style/main.css
+++ b/public/style/main.css
@@ -123,7 +123,8 @@ only screen and (max-width: 760px),
 		top: -9999px;
 		left: -9999px;
 	}
-	
+  
+  /* Each inspection is encapsulated as a table row. */
 	tr { 
     border: 5px solid; 
   }
