input fields should look better now

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -175,8 +175,11 @@ only screen and (max-width: 760px),
     margin-bottom: 3.5%;
   }
 
-  input {
+  input[type=text] {
     padding: 3px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
   }
 
   textarea {
