css for text area and select

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -176,7 +176,6 @@ only screen and (max-width: 760px),
   }
 
   input[type=text] {
-    padding: 3px;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -184,6 +183,9 @@ only screen and (max-width: 760px),
 
   textarea {
     padding: 3px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
   }
 
   select {
