--- a/public/style/main.css
+++ b/public/style/main.css
@@ -176,19 +176,19 @@ only screen and (max-width: 760px),
   }
 
   input[type=text] {
-    padding: 12px 20px;
+    padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
 
   textarea {
-    padding: 12px 20px;
+    padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
 
   select {
-    padding: 12px 20px;
+    padding: 16px;
     margin: 8px 0;
     box-sizing: border-box;
   }
