--- a/public/style/main.css
+++ b/public/style/main.css
@@ -176,7 +176,7 @@ only screen and (max-width: 760px),
   }
 
   input[type=text] {
-    padding: 12px;
+    padding: 12px 3px;
     margin: 8px 0;
     box-sizing: border-box;
   }
