--- a/public/style/main.css
+++ b/public/style/main.css
@@ -98,14 +98,16 @@ only screen and (max-width: 760px),
   }
 
   /* Align input fields in the center of the page */
+  /* For worker name...*/
   input[type=text] {
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
   }
 
+  /* For workers assessment...*/
   textarea {
-    padding: 13px;
+    padding: 16px;
     margin: 8px 0;
     box-sizing: border-box;
   }
