--- a/public/style/main.css
+++ b/public/style/main.css
@@ -114,8 +114,8 @@ only screen and (max-width: 760px),
 
   /* for state select...*/
   select {
-    padding: 32px;
-    margin: 8px 0;
+    padding: 36px;
+    margin-right: 8px 0;
     box-sizing: border-box;
   }
 
