--- a/public/style/main.css
+++ b/public/style/main.css
@@ -115,6 +115,8 @@ only screen and (max-width: 760px),
   /* for state select...*/
   select {
     /* Note, that padding also adds air above and below text. */
+    padding-top: 4px;
+    padding-bottom: 4px;
     padding-right: 16px;
     /* Larger margin-right should make boxes align*/
     box-sizing: border-box;
