--- a/public/style/main.css
+++ b/public/style/main.css
@@ -202,9 +202,8 @@ only screen and (max-width: 760px),
 
   input[type=text] {
     width: 66%;
-    align-self: center;
+    margin: auto;
     padding: 12px 3px;
-    margin: 8px 0;
     box-sizing: border-box;
   }
 
