--- a/public/style/main.css
+++ b/public/style/main.css
@@ -202,20 +202,20 @@ only screen and (max-width: 760px),
 
   input[type=text] {
     width: 66%;
-    margin: auto;
-    padding: 12px 3px;
+    margin: 0 auto;
+    padding: 12em 3em;
     box-sizing: border-box;
   }
 
   textarea {
-    padding: 12px;
-    margin: 8px 0;
+    padding: 12em;
+    margin: 0 auto;
     box-sizing: border-box;
   }
 
   select {
-    padding: 16px;
-    margin: 20px 0;
+    padding: 16em;
+    margin: 0 auto;
     box-sizing: border-box;
   }
 }
