--- a/public/style/main.css
+++ b/public/style/main.css
@@ -209,6 +209,7 @@ only screen and (max-width: 760px),
 
   textarea {
     padding: 10%;
+    height: 4em;
     margin-left: 0 auto;
     margin-right: 0 auto;
     box-sizing: border-box;
