--- a/public/style/main.css
+++ b/public/style/main.css
@@ -205,17 +205,20 @@ only screen and (max-width: 760px),
   }
 
   input[type=text] {
+    text-align: center;
     width: 33%;
     box-sizing: border-box;
   }
 
   textarea {
+    text-align: center;
     height: 2em;
     width: 33%;
     box-sizing: border-box;
   }
 
   select {
+    text-align: center;
     width: 16.6%;
     box-sizing: border-box;
   }
