added button for truncate.

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -23,5 +23,8 @@
         <form action="/inspection">
             <input type="submit" value="Refresh data">
         </form>
+        <form action="/truncate">
+            <input type="submit" value="Delete data">
+        </form>
     </center>
 </footer>
