set width for form on pc to be smaller

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -193,6 +193,7 @@ only screen and (max-width: 760px),
 @media only screen and (min-width: 1024px) {
   form {
     margin: auto;
+    width: 50%;
   }
 
   .tableheader {
