Show current date and time

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,9 @@
+<form>
+  <p> The current date and time is: </p>
+  <span id="datetime"></span>
+</form> 
+
+
 <h1> Commit plant inspection </h1>
 
 <form method="POST" action="/inspection">
