--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,8 @@
+<!-- Show current date and time -->
+<script>
+  var dt = new Date();
+  document.getElementById("datetime").innerHTML = dt.toLocaleString();
+</script>
 <form>
   <p> The current date and time is: </p>
   <span id="datetime"></span>
